fix bug
- fixed bug not showing image on filtered articles
- repositioned mapCenter and resized some styling

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
 #img {
 	position: absolute;
 z-index: 100;
-top: 4%; left: 37%;
+top: 8%; left: 37%;
 width: 25%;
 height: 8%;
 }
